<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:id="@+id/Username"
        android:inputType="text"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linlay1"
        android:layout_below="@+id/Username"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/fname"
            android:hint="@string/firstname"
            android:layout_weight="1"
            android:inputType="text"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lname"
            android:hint="@string/lastname"
            android:layout_weight="1"
            android:inputType="text"
            />

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:hint="@string/email"
        android:layout_below="@+id/linlay1"
        android:inputType="textEmailAddress"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/linlayphone"
        android:layout_below = "@+id/email"

        >
        <EditText
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:id="@+id/phonenumber"
            android:hint="@string/phone"
            />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Password"
            android:inputType="textPassword"
            android:hint="@string/password"
            />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:onClick="sendMessage"
        android:id="@+id/buttonsumbit1"
        android:text="Create Account"
        android:layout_below="@id/linlayphone"
        style="@style/Btndimensions"
        />
</RelativeLayout>